# NLSS-PyDTS

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yaml
src/nlss-pydts/: sending.py
src/nlss-pydts/dependencies/: lib_A.py  specs.json
src/py-dts/: main.py  sending.py  tools.py
src/py-dts/dependencies/: lib_A.py  specs.json
src/py-dts/sys/: cli.py
src/pydts/: receiving.py  sending.py  tools.py
src/pydts/dependencies/: specs.json
src/pydts/sys/: cli.py
