[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NLSS-PyDTS"
version = "0.1.4"
authors = [
  { name="Next Level Software Studio", email="seu@email.com" },
]
description = "NLSS Data Transfer System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/NextLevelSoftwareStudio/NLSS-PyDTS"

[tool.hatch.build.targets.wheel]
packages = ["src/py-dts"]